09-05-16 Formulaire Inscription User

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,7 +5,7 @@
   </p>
   <ul>
     <li>Créé le:  <%= project.published_at %></li>
-    <li>Auteur:   <%= project.owner.name %></li>
+    <li>Auteur:   <%= project.owner.username %></li>
     <li>Catégorie: <%= project.category.name %></li>
   </ul>
 <% end %>
