--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <%= stylesheet_link_tag 'devise', media: 'all', 'data-turbolinks-track' => true %>
     <%= stylesheet_link_tag  "devise/blue.css"  %>
+    <%= javascript_include_tag 'devise/registration.js', 'data-turbolinks-track' => true %>
 
     <%= csrf_meta_tags %>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -19,5 +20,6 @@
   <body class="hold-transition login-page">
     <%= render "partials/alert" %>
     <%= yield %>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1Sle-FLE8KuTpBvtogMqwXgMCisKj9ME&signed_in=true&libraries=places&callback=initAutocomplete" async defer></script>
   </body>
 </html>
