--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
   </p>
   <ul>
     <li>Créé le:  <%= article.published_at %></li>
-    <li>Auteur:   <%= article.author.name %></li>
+    <li>Auteur:   <%= article.author.username %></li>
     <li>Catégorie: <%= article.category.name %></li>
   </ul>
 <% end %>
