--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
   </p>
   <ul>
     <li>Créé le:  <%= @article.published_at %></li>
-    <li>Auteur:   <%= @article.author.name %></li>
+    <li>Auteur:   <%= @article.author.username %></li>
     <li>Catégorie: <%= @article.category.name %></li>
   </ul>
 </article>
@@ -26,7 +26,7 @@
       <%= comment.content %>
     </p>
     <ul>
-      <li>par: <%= comment.user.name %></li>
+      <li>par: <%= comment.user.username %></li>
       <li>il y a: <%= time_ago_in_words(comment.created_at) %></li>
     </ul>
     <% end %>
