12-05-2016 Ajout des interactions user sur projets // Récupération Projets plus actifs

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,12 @@
 <% if current_user %>
   Bienvenue <%= image_tag current_user.avatar, size:"250x250" %> <%= current_user.username %>
 <% end %>
+
+<% @most_active_projects.each do |project| %>
+  <p><%= project.name %></p>
+<% end %>
+
+<% @last_projects.each do |project| %>
+  <p><%= project.name %></p>
+  <p><%= project.created_at %></p>
+<% end %>
