--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,6 +12,17 @@
 <section id="comments">
 
   <% if user_signed_in? %>
+    
+    <%= form_for :like, :url => likes_path(@article) do |f| %>
+      <input id="like[likeable_type]" name="like[likeable_type]" type="hidden" value="Article" />
+      <input id="like[likeable_id]" name="like[likeable_id]" type="hidden" value="<%= @article.id %>" />
+      <% if @article.likes.where(user: current_user).last %>
+        <%= f.submit "Je n'aime plus" %>
+      <% else %>
+        <%= f.submit "J'aime" %>
+      <% end %>
+    <% end %>    
+    
     <%= form_for :comment, :url => blog_comments_path(@article) do |f| %>
       <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
       <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @article.id %>" />
