--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,6 +12,25 @@
 <section id="comments">
 
   <% if user_signed_in? %>
+    
+    <%= form_tag "/projects/new_support" do %>
+      <%= hidden_field_tag "id", @project.id %>
+      <% if @supported_by_user %>
+        <%= submit_tag "Je ne souhaite plus soutenir ce projet" %>
+      <% else %>
+        <%= submit_tag "Je soutiens ce projet" %>
+      <% end %>
+    <% end %>
+    
+    <%= form_tag "/projects/new_participation" do %>
+      <%= hidden_field_tag "id", @project.id %>
+    <% if @user_participates %>
+      <%= submit_tag "Je ne souhaite plus participer à ce projet" %>
+    <% else %>
+      <%= submit_tag "Je souhaite participer à ce projet" %>
+      <% end %>
+    <% end %>    
+    
     <%= form_for :comment, :url => blog_comments_path(@project) do |f| %>
       <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
       <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @project.id %>" />
@@ -19,6 +38,7 @@
       <%= f.submit :valider %>
     <% end %>
   <% end %>
+  
   <div class="comments-one">
     <h2>Commentaires</h2>
     <% @project.comments.each do | comment | %>
