--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -56,7 +56,7 @@
 
             </td>
             <td>
-              <%= project.owner.name %>
+              <%= project.owner.username %>
             </td>
             <td>
               <%= project.state %>
