--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -7,11 +7,11 @@
       </div>
       <div class="form-group">
         <%= label_tag 'icon', "Icon" %>
-        <%= f.file_field :icon, class: "form-control" %>
+        <%= f.file_field :icon %>
       </div>
       <div class="form-group">
         <%= label_tag 'color', "Couleur de la catégorie" %>
-        <%= f.text_field :color, class: "form-control colorpicker" %>
+        <%= f.text_field :color, class: " colorpicker" %>
       </div>
       <%= f.submit :valider, class: "btn btn-primary" %>
     <% end %>
