--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="project_show_card--infos">
       <div class="project_show_card--infos_created">
-        Projet créé le: <%= @project.created_at %> par <%= @project.owner.name %>
+        Projet créé le: <%= @project.created_at %> par <%= @project.owner.username %>
       </div>
     </div>
   </div>
