--- a/app/views/admin/projects/new.html.erb
+++ b/app/views/admin/projects/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container-fluid">
   <div class="project_form">
-    <%= form_for :project, :url => projectsCreatePost_url do |f| %>
+    <%= form_for :project, :url => admin_projects_path do |f| %>
       <div class="form-group">
         <%= label_tag 'project[category_id]', 'Categorie' %>
-        <%= select_tag "project[category_id]", options_from_collection_for_select(@categories, "id", "name"), class: "form-control" %>
+        <%= select_tag "project[category_id]", options_from_collection_for_select(@categories, "id", "name") %>
       </div>
       <div class="form-group">
         <%= label_tag 'name', 'Nom du projet' %>
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <%= label_tag 'content', 'Localisation' %>
-        <%= f.text_area :location, class: "form-control" %>
+        <%= f.text_area :location %>
       </div>
       <div class="form-group">
         <%= f.label :thumb, 'Image'%>
