--- a/app/views/partials/admin/_header.html.erb
+++ b/app/views/partials/admin/_header.html.erb
@@ -34,14 +34,14 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <%= image_tag current_user.avatar , width: "160px",class:"user-image img-circle",  height: "160px",  alt: "User Image" %>
-            <span class="hidden-xs"><%= current_user.name%></span>
+            <span class="hidden-xs"><%= current_user.username%></span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
             <li class="user-header">
               <%= image_tag current_user.avatar , width: "160px",class:"user-image img-circle",  height: "160px",  alt: "User Image" %>
               <p>
-                <%= current_user.name%>
+                <%= current_user.username%>
                 <small>Membre depuis <%= time_ago_in_words current_user.created_at %></small>
               </p>
             </li>
