--- a/app/views/partials/admin/_menu.html.erb
+++ b/app/views/partials/admin/_menu.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag current_user.avatar , width: "160px",class:"user-image img-circle",  height: "160px",  alt: "User Image" %>
       </div>
       <div class="pull-left info">
-        <p><%= current_user.name %></p>
+        <p><%= current_user.username %></p>
         <a href="#"><i class="fa fa-circle text-success"></i> En ligne</a>
       </div>
     </div>
