--- a/app/views/partials/admin/_header.html.erb
+++ b/app/views/partials/admin/_header.html.erb
@@ -48,7 +48,7 @@
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
-                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                <%= link_to "Profile", admin_user_path(current_user.id), id:"btn btn-default btn-flat"  %>
               </div>
               <div class="pull-right">
                 <%= link_to "<i class='fa fa-power-off' aria-hidden='true'></i> Deconnexion".html_safe, destroy_user_session_path, :method => :delete, class: "btn btn-default btn-flat" %>
