--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,11 +1,11 @@
 <section class="content-header">
   <h1>
-    Blog
+    Articles
     <small>Mes articles</small>
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-dashboard"></i> Accueil</a></li>
-    <li><a href="#">Blog</a></li>
+    <li><a href="#">Articles</a></li>
     <li class="active">Mes articles</li>
   </ol>
 </section>
@@ -42,9 +42,9 @@
                 <td style="line-height:64px;"><%= (article.published_at) ? time_tag(article.published_at) : '' %></td>
                 <td style="line-height:64px;">
                   <%= link_to '<i class="fa fa-facebook" aria-hidden="true"></i>'.html_safe, admin_redirectToFacebook_url(article.id), class: 'btn btn-primary', method: 'post'%>
-                  <%= link_to "<i class='fa fa-eye'></i>".html_safe, blog_url(article.friendly_id), class:'btn btn-success'%>
-                  <%= link_to "<i class='fa fa-pencil'></i>".html_safe, edit_admin_blog_url(article.friendly_id), class:'btn btn-warning'%>
-                  <%= link_to "<i class='fa fa-trash-o'></i>".html_safe, admin_blog_url(article.friendly_id), method: "delete", class:'btn btn-danger'%>
+                  <%= link_to "<i class='fa fa-eye'></i>".html_safe, article_url(article.friendly_id), class:'btn btn-success'%>
+                  <%= link_to "<i class='fa fa-pencil'></i>".html_safe, edit_admin_article_url(article.friendly_id), class:'btn btn-warning'%>
+                  <%= link_to "<i class='fa fa-trash-o'></i>".html_safe, admin_article_url(article.friendly_id), method: "delete", class:'btn btn-danger'%>
                 </td>
               </tr>
               <% end %>
