--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <% @articles.each do | article | %>
-  <h1><%= link_to article.title, blog_path( article.friendly_id )%></h1>
+  <h1><%= link_to article.title, article_path( article.friendly_id )%></h1>
   <p>
     <%= article.content %>
   </p>
