--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <article class="article-one">
-  <h1><%= link_to @article.title, blog_path( @article.friendly_id ) %></h1>
+  <h1><%= link_to @article.title, article_path( @article.friendly_id ) %></h1>
   <p>
     <%= @article.content %>
   </p>
@@ -23,7 +23,7 @@
       <% end %>
     <% end %>
 
-    <%= form_for :comment, :url => blog_comments_path(@article) do |f| %>
+    <%= form_for :comment, :url => article_comments_path(@article) do |f| %>
       <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
       <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @article.id %>" />
       <%= f.text_area :content, class: "form-control", rows: "6", cols: "100"%>
