--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav"  id="menu-left">
-        <li><%= link_to "Blog", blogs_path %></li>
+        <li><%= link_to "Articles", articles_path %></li>
         <li><%= link_to "Projets", projects_path %></li>
         <li><%= link_to "Sondages", surveys_path %></li>
         <li><%= link_to "A propos", about_url %></li>
