--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <article class="article-one">
-  <h1><%= link_to @project.name, blog_path( @project.friendly_id ) %></h1>
+  <h1><%= link_to @project.name, article_path( @project.friendly_id ) %></h1>
   <p>
     <%= @project.content %>
   </p>
@@ -12,7 +12,7 @@
 <section id="comments">
 
   <% if user_signed_in? %>
-    
+
     <%= form_tag "/projects/new_support" do %>
       <%= hidden_field_tag "id", @project.id %>
       <% if @supported_by_user %>
@@ -21,7 +21,7 @@
         <%= submit_tag "Je soutiens ce projet" %>
       <% end %>
     <% end %>
-    
+
     <%= form_tag "/projects/new_participation" do %>
       <%= hidden_field_tag "id", @project.id %>
     <% if @user_participates %>
@@ -29,16 +29,16 @@
     <% else %>
       <%= submit_tag "Je souhaite participer à ce projet" %>
       <% end %>
-    <% end %>    
-    
-    <%= form_for :comment, :url => blog_comments_path(@project) do |f| %>
+    <% end %>
+
+    <%= form_for :comment, :url => artiles_comments_path(@project) do |f| %>
       <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
       <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @project.id %>" />
       <%= f.text_area :content, class: "form-control", rows: "6", cols: "100"%>
       <%= f.submit :valider %>
     <% end %>
   <% end %>
-  
+
   <div class="comments-one">
     <h2>Commentaires</h2>
     <% @project.comments.each do | comment | %>
