--- a/app/views/admin/surveys/addquestion.html.erb
+++ b/app/views/admin/surveys/addquestion.html.erb
@@ -24,7 +24,7 @@
           </div>
           <div class="form-group">
             <%= label_tag "input_type", "Type de donnée attentdue" %>
-            <%= select 'pollFields', :input_type, ['text', 'select', 'number', 'date'], class: "form-control" , id: "selectField"%>
+            <%= select 'surveyFields', :input_type, ['text', 'select', 'number', 'date', 'checkbox'], class: "form-control" , id: "selectField"%>
           </div>
           <div class="form-group">
             <%= f.text_field :rules, class: "form-control", placeholder: "Règles suivant ce format: min='1',max='10' " %>
