--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -10,14 +10,14 @@ meta title: "Meusetech - #{@survey.title}",
     <% @survey.fields.each do | field | %>
       <div class="form-group">
         <label for="fields[<%= field.id %>]"><%= field.question %></label>
-        <% if field.optionsFormated != nil %>
+        <% if field.optionsFormated.size > 0 %>
           <select name="fields[questions][<%= field.id %>]" class="form-control" <%= field.is_required ? "required" : "" %>>
             <% field.optionsFormated.each_with_index do | value, key | %>
               <option value="<%= key %>"> <%= value %></option>
             <% end %>
           </select>
         <% else %>
-          <input type="<%= field.input_type %>" name="fields[questions][<%= field.id %>]"
+          <input type="<%= field.input_type %>" name="fields[questions][<%= field.id %>]" value="<%= ( field.input_type == "checkbox" ) ? "0" : "" %>"
             class="form-control" <%= field.is_required ? "required" : "" %> <%= field.rulesFormated %> />
         <% end %>
       </div>
