--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -14,7 +14,7 @@
             <div class="form-group">
               <%= f.label :name, "Nom : ", class: "col-sm-4 control-label" %>
               <div class="col-sm-8">
-                <%= f.text_field :name, class: "form-control" %>
+                <%= f.text_field :username, class: "form-control" %>
               </div>
             </div>
             <div class="form-group">
