--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -19,6 +19,7 @@
                 <th>Droits comment. ?</th>
                 <th>Nombre Projets</th>
                 <th>Nombre Comment</th>
+                <th>Banni ?</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -29,9 +30,28 @@
                   <td><%= user.email %></td>
                   <td><%= user.city %></td>
                   <td><%= time_tag(user.created_at) %></td>
-                  <td><%= user.can_comment ? "oui" : "non" %></td>
+                  <td>
+                    <%= form_tag admin_usercancomment_url do %>
+                      <%= hidden_field_tag "id", user.id %>
+                      <% if user.can_comment %>
+                        <%= submit_tag "Oui" %>
+                      <% else %>
+                        <%= submit_tag "Non" %>
+                      <% end %>
+                    <% end %>
+                  </td>
                   <td><%= user.projects.size %></td>
                   <td><%= user.comments.size %></td>
+                  <td>
+                    <%= form_tag admin_userban_url do %>
+                      <%= hidden_field_tag "id", user.id %>
+                      <% if user.is_banned %>
+                        <%= submit_tag "Oui" %>
+                      <% else %>
+                        <%= submit_tag "Non" %>
+                      <% end %>
+                    <% end %>
+                  </td>
                   <td>
                     <%= link_to "<i class='fa fa-eye'></i>".html_safe, admin_user_url(user.id), class: "btn btn-success" %>
                     <%= link_to "<i class='fa fa-pencil'></i>".html_safe, edit_admin_user_url(user.id), class: "btn btn-warning" %>
