--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -2,7 +2,7 @@
 <%= tinymce :language => "fr_FR" %>
 <div class="container">
   <div class="article_form">
-    <%= form_for :articles do |f| %>
+    <%= form_for :articles, :url => admin_articles_path do |f| %>
       <div class="form-group">
         <%= label_tag "articles[category_id]", "Categorie" %>
         <%= select_tag "articles[category_id]", options_from_collection_for_select(@categories, "id", "name")%>
