--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,8 +38,8 @@
 
   <div class="field">
     <div id="locationField">
-      <%= label("",:Coordonnées) %><br />
-      <%= text_field_tag 'autocomplete', 'Coordonnées'%>
+        <%= label("",:Ville) %><br />
+        <%= text_field_tag 'autocomplete' %>
     </div>
 
     <%= f.hidden_field :city, id:"locality" %>
