--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -29,6 +29,6 @@
       </div>
       <%= render "partials/admin/footer" %>
     </div><!-- ./wrapper -->
-
+    <%= yield :script %>
   </body>
 </html>
