--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :script do %>
+  <%= javascript_include_tag 'categories', 'data-turbolinks-track' => true %>   
+<% end %>
+
 <div class="container">
   <div class="article_form">
     <%= form_for :category, url: admin_categories_path, method:'post' do |f| %>
@@ -27,3 +31,4 @@
     </div>
   </div>
 </div>
+
