--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,19 +1,53 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Editer mon profil</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(@user, url: users_Edit_path) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <%= f.label :username, "Pseudo" %><br />
+      <%= f.text_field :username, autofocus: true %>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+  <div class="field">
+      <%= f.label :first_name, "Prénom" %><br />
+      <%= f.text_field :first_name %>
+  </div>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.label :last_name, "Nom"  %><br />
+      <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
+    <div id="locationField">
+      <%= label("",:Ville) %><br />
+      <%= text_field_tag 'autocomplete'%>
+    </div>
+
+    <%= f.hidden_field :city, id:"locality" %>
+    <%= f.hidden_field :cp, id:"postal_code" %>
+    <%= f.hidden_field :country, id:"country" %>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :territory_attachment, "Attachement au territoire" %><br />
+    <%= f.select :territory_attachment, options_for_select(["Domicile", "Travail", "Loisirs", "Originaire du territoire", "Autre"]), {}, :onChange=>"javascript: changeHiddenInput(this);"  %><br />
+  </div>
+
+  <div class="field", style="display:none", id="hiddenDiv">
+    <%= f.label :territory_attachment, "Précisez :" %><br />
+    <%= f.text_field :territory_attachment, id:"hiddenInput" %>
+  </div><br/>
+
+
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password %> <i>(Laissez ce champ vide si vous ne souhaitez pas le modifier)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
@@ -23,17 +57,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <i>(Votre mot de passe actuel est nécessaire pour valider les changements effectués)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+      <%= f.submit "Mettre à jour" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%= link_to "Retour", :back %>
