--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -27,9 +27,10 @@
             </a>
             <ul class="dropdown-menu multi-level">
               <% if current_user.is_admin %>
-              <li><%= link_to "<i class='fa fa-dashboard' aria-hidden='true'></i> Administration".html_safe, admin_dashboard_url %></li>
+                <li><%= link_to "<i class='fa fa-dashboard' aria-hidden='true'></i> Administration".html_safe, admin_dashboard_url %></li>
               <% end %>
-              <li><%= link_to "<i class='fa fa-power-off' aria-hidden='true'></i> Deconnection".html_safe, destroy_user_session_path, :method => :delete %></li>
+                <li><%= link_to "<i class='fa fa-user' aria-hidden='true'></i> Mon Profil".html_safe, users_Account_url %></li>
+              <li><%= link_to "<i class='fa fa-power-off' aria-hidden='true'></i> Deconnexion".html_safe, destroy_user_session_path, :method => :delete %></li>
             </ul>
           </li>
         <% else %>
@@ -37,7 +38,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Connexion <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "<i class='fa fa-user'></i> Se connecter".html_safe, new_session_path(:user) %></li>
-              <li><%= link_to "Connection avec Facebook", user_omniauth_authorize_path(:facebook) %></li>
+              <li><%= link_to "Connexion avec Facebook", user_omniauth_authorize_path(:facebook) %></li>
               <li><%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %></li>
               <li><%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %></li>
               <li class="dropdown">
