--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,7 +4,7 @@
     <%= @project.content %>
   </p>
   <ul>
-    <li>Créé le:  <%= @project.published_at %></li>
+    <li>Créé le:  <%= @project.created_at %></li>
     <li>Auteur:   <%= @project.owner.username %></li>
     <li>Catégorie: <%= @project.category.name %></li>
   </ul>
