--- a/app/views/users/account/_sidebar.html.erb
+++ b/app/views/users/account/_sidebar.html.erb
@@ -18,6 +18,7 @@
     <%= link_to "Mes projets".html_safe, users_Projects_url, class: "btn btn-block btn-default" %>
       <%= link_to "Mes sondages".html_safe, users_Surveys_url, class: "btn btn-block btn-default" %>
     <%= link_to "Mes commentaires".html_safe, users_Comments_url, class: "btn btn-block btn-default" %>
+    <%= link_to "Mes likes".html_safe, users_Likes_url, class: "btn btn-block btn-default" %>
     <%= link_to "Mes notifications".html_safe, users_Notifs_url, class: "btn btn-block btn-default" %>
       <%= link_to "<i class='fa fa-pencil'></i> Editer mes informations".html_safe, edit_user_registration_url, class: "btn btn-block btn-primary" %>
     <% if current_user.is_admin %>
