debut de la mise en place des notifs

--- a/app/views/partials/admin/_header.html.erb
+++ b/app/views/partials/admin/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="main-header">
   <!-- Logo -->
-  <%= link_to "<span class='logo-mini'><b>M</b>TK</span><span class='logo-lg'><b>Meuse</b>Tech</span>".html_safe, admin_dashboard_url, class: "logo" %>
+  <%= link_to "<span class='logo-mini'><b>M</b>TK</span><span class='logo-lg'><b>Meuse</b>Tech</span>".html_safe, root_url, class: "logo" %>
 
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top" role="navigation">
