--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -28,8 +28,9 @@
             <ul class="dropdown-menu multi-level">
               <% if current_user.is_admin %>
                 <li><%= link_to "<i class='fa fa-dashboard' aria-hidden='true'></i> Administration".html_safe, admin_dashboard_url %></li>
+              <% else %>
+                <li><%= link_to "<i class='fa fa-user' aria-hidden='true'></i> Mon espace perso".html_safe, users_Account_url %></li>
               <% end %>
-                <li><%= link_to "<i class='fa fa-user' aria-hidden='true'></i> Mon Profil".html_safe, users_Account_url %></li>
               <li><%= link_to "<i class='fa fa-power-off' aria-hidden='true'></i> Deconnexion".html_safe, destroy_user_session_path, :method => :delete %></li>
             </ul>
           </li>
