--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -19,6 +19,7 @@
         <li><%= link_to "Projets", projects_path %></li>
         <li><%= link_to "Sondages", surveys_path %></li>
         <li><%= link_to "A propos", about_url %></li>
+        <li><%= link_to "Conversation/Message", conversations_path %></li>
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
