--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -46,7 +46,7 @@
                 </td>
                 <td style="line-height:64px;"><%= image_tag(article.thumb, size: "64x64", alt: "image article")%></td>
                 <td style="line-height:64px;"><%= image_tag(article.category.icon, size: "32x32", alt: "image category")%></td>
-                <td style="line-height:64px;"><%= article.title %></td>
+                <td style="line-height:64px;"><%= article.name %></td>
                 <td style="line-height:64px;"><%= time_tag(article.created_at) %></td>
                 <td style="line-height:64px;"><%= (article.published_at) ? time_tag(article.published_at) : '' %></td>
                 <td style="line-height:64px;">
