--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -8,8 +8,8 @@
         <%= f.select :category_id, options_from_collection_for_select( @categories, "id", "name", @articles.category.id ), class: "form-control" %>
       </div>
       <div class="form-group">
-        <%= label_tag 'title', "Titre de l'article" %>
-        <%= f.text_field :title, class: "form-control" %>
+        <%= label_tag 'name', "Titre de l'article" %>
+        <%= f.text_field :name, class: "form-control" %>
       </div>
       <div class="form-group">
         <%= label_tag 'thumb', "Photo" %>
