fix tinymce in survey#new

--- a/app/views/admin/surveys/new.html.erb
+++ b/app/views/admin/surveys/new.html.erb
@@ -24,7 +24,7 @@
             <%= f.text_field :title, class: "form-control" %>
           </div>
           <div class="form-group">
-            <%= label_tag 'description', "Description du sondage" %>
+            <%= label_tag 'survey[description]', "Description du sondage" %>
             <%= f.text_area :description, :class => "tinymce", :rows => 25, :cols => 120 %>
           </div>
           <div class="form-group">
