Ajout des notifications

--- a/app/views/partials/admin/_footer.html.erb
+++ b/app/views/partials/admin/_footer.html.erb
@@ -2,5 +2,5 @@
   <div class="pull-right hidden-xs">
     <b>Version</b> 0.9
   </div>
-  <strong>Créer par le groupe des <a href="http://webogreen.fr">Weeners</a>.</strong> avec <i class="fa fa-heart-o text-danger"></i>.
+  <strong>Crée</strong> avec <i class="fa fa-heart-o text-danger"></i> par le groupe des <a href="http://webogreen.fr">Weeners</a>.
 </footer>
