--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -3,5 +3,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "admin/template/AdminLTE";
+@import "admin/template/notifications";
 @import "admin/template/skins/_all-skins";
 @import "jquery.minicolors"
