--- a/app/views/partials/admin/_header.html.erb
+++ b/app/views/partials/admin/_header.html.erb
@@ -52,7 +52,7 @@
                 <% end %>
               </ul>
             </li>
-            <li class="footer"><a href="../../admin/notifications">View all</a></li>
+            <li class="footer"><a href="../../admin/notifications">Tout voir</a></li>
           </ul>
         </li>
         <!-- User Account: style can be found in dropdown.less -->
