--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -21,6 +21,60 @@
         <li><%= link_to "A propos", about_url %></li>
         <li><%= link_to "Conversation/Message", conversations_path %></li>
         <% if user_signed_in? %>
+        <li class="dropdown notifications-menu">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-bell-o"></i>
+            <% if @notifications.count > 0 %>
+              <span class="label label-warning"><%= @notifications.count %></span>
+            <% end %>
+          </a>
+          <ul class="dropdown-menu">
+            <% if @notifications.count > 0 %>
+              <li class="header">Vous avez <%= @notifications.count %> notification(s)</li>
+              <% if current_user.is_admin? %>
+                <li><a href="../../admin/mark-as-read">Tout marquer comme lu</a></li>
+              <% else %>
+                <li><%= link_to "Tout marquer comme lu".html_safe, users_Readed_url %></li>
+              <% end %>
+
+            <% else %>
+              <li class="header">Aucune notification</li>
+            <% end %>
+            <li>
+              <!-- inner menu: contains the actual data -->
+              <ul class="menu">
+                <% @notifications.limit(5).each do | notif | %>
+                <li>
+                    <% if notif.message == "Suppression de Projet" %>
+                      <a>
+                        <i class="fa fa-users text-aqua"></i>
+                        <%= notif.message %> : <%= notif.notifiable_type %>
+                        </br> par <%= User.find(notif.sender_id).username %>
+                      </a>
+                    <% elsif notif.message == "Nouveau Projet" %>
+                      <a href= <%= "/#{notif.notifiable_type.downcase}s/#{notif.notifiable_id}" %> >
+                        <i class="fa fa-users text-aqua"></i>
+                        <%= notif.message %> : <%= notif.notifiable.name %>
+                        </br> par <%= User.find(notif.sender_id).username %>
+                      </a>
+                    <% else %>
+                      <a href= <%= "/#{notif.notifiable_type.downcase}s/#{notif.notifiable_id}" %> >
+                        <i class="fa fa-users text-aqua"></i>
+                        <%= notif.message %> sur <%= notif.notifiable.name %>
+                        </br> par <%= User.find(notif.sender_id).username %>
+                      </a>
+                    <% end %>
+                </li>
+                <% end %>
+              </ul>
+            </li>
+            <% if current_user.is_admin %>
+              <li class="footer"><a href="../../admin/notifications">Tout voir</a></li>
+            <% else %>
+              <li class="footer"><%= link_to "Tout voir".html_safe, users_Notifs_url %></li>
+            <% end %>
+          </ul>
+          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <%= image_tag(current_user.avatar, size: "25x25", alt: "Avatar")%>
