--- a/app/views/partials/_alert.html.erb
+++ b/app/views/partials/_alert.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:notice] != nil && flash[:notice] != ""%>
-  <div class="alert alert-<%= flash[:class] %>">
+  <div class="alert alert-<%= flash[:class] %>" style="position:absolute; top:5%;; right:5%; width: 15%;height:8%;">
     <a href="#" data-dismiss="alert" class="close">×</a>
         <%= flash[:notice] %>
   </div>
