--- a/app/views/partials/frontend/_menu.html.erb
+++ b/app/views/partials/frontend/_menu.html.erb
@@ -1,4 +1,4 @@
-<nav style="/* position: absolute; */">
+<nav>
   <ul style="margin: 0;top: 58.5%;bottom: 0;left: 0;width: 8%;padding: 0;list-style: none;position: absolute;z-index: 1000;">
     <li style="height: 15%;width: 100%;margin-bottom:6.25%;"><%= link_to "<span style='display:none'>Projets</span>".html_safe, projects_path, {style:"height: 100%;width: 100%;display: block;"} %></li>
     <li style="height: 11.5%;width: 100%;margin-bottom:3%;"><%= link_to "<span style='display:none'>Articles</span>".html_safe, articles_path, {style:"height: 100%;width: 100%;display: block;"} %></li>
