--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render "partials/frontend/sidebar_left" %>
+  <% #= render "partials/frontend/sidebar_left" %>
   <%= render "partials/frontend/menu" %>
   <div class="container">
     <%= render "partials/alert" %>
