--- a/app/views/partials/admin/_menu.html.erb
+++ b/app/views/partials/admin/_menu.html.erb
@@ -64,6 +64,16 @@
           <li class="<%= (params[:controller] === 'admin/users/users' && params[:action] === 'index' ) ? 'active' : ''  %>"><%= link_to "<i class='fa fa-circle-o'></i>Liste".html_safe, admin_users_url %></li>
         </ul>
       </li>
+        
+        <li class="treeview <%= (params[:controller] === 'admin/comments/comments') ? 'active' : ''  %>">
+        <a href="#">
+          <i class="fa fa-comments" aria-hidden="true"></i> <span>Commentaires</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+            <li class="<%= (params[:controller] === 'admin/comments/comments' && params[:action] === 'index' ) ? 'active' : ''  %>"><%= link_to "<i class='fa fa-circle-o'></i>Liste".html_safe, admin_comments_url %></li>
+        </ul>
+      </li>
+          
       <li><a href="../../admin/documentation"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
       <li class="header">LABELS</li>
       <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
